# worktimecalc

./: .bumper.toml  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  tox.ini  worktimecalc.py
.github/workflows/: lint_test.yml
src/: worktimecalc.py
